parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE

Grammar

Rule 0     S' -> emoti
Rule 1     emoti -> code
Rule 2     emoti -> conditional
Rule 3     emoti -> while
Rule 4     emoti -> end
Rule 5     code -> expression
Rule 6     code -> var_assign
Rule 7     code -> print
Rule 8     code -> empty
Rule 9     var_assign -> NAME ASSIGN expression
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression DIVIDE expression
Rule 12    expression -> expression MULTIPLY expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression LESSTHAN expression
Rule 15    expression -> expression GREATERTHAN expression
Rule 16    expression -> expression EQUALS expression
Rule 17    expression -> expression NOTEQUALS expression
Rule 18    conditional -> IF expression THEN
Rule 19    while -> WHILE expression THEN
Rule 20    end -> END
Rule 21    expression -> NAME
Rule 22    expression -> INT
Rule 23    expression -> FLOAT
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    print -> PRINT LPAREN expression RPAREN
Rule 26    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 9
DIVIDE               : 11
ELSE                 : 
END                  : 20
EQUALS               : 16
FLOAT                : 23
GREATERTHAN          : 15
IF                   : 18
INT                  : 22
LESSTHAN             : 14
LPAREN               : 24 25
MINUS                : 13
MULTIPLY             : 12
NAME                 : 9 21
NOTEQUALS            : 17
PLUS                 : 10
PRINT                : 25
RPAREN               : 24 25
THEN                 : 18 19
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

code                 : 1
conditional          : 2
emoti                : 0
empty                : 8
end                  : 4
expression           : 5 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 19 24 25
print                : 7
var_assign           : 6
while                : 3

Parsing method: LALR

state 0

    (0) S' -> . emoti
    (1) emoti -> . code
    (2) emoti -> . conditional
    (3) emoti -> . while
    (4) emoti -> . end
    (5) code -> . expression
    (6) code -> . var_assign
    (7) code -> . print
    (8) code -> . empty
    (18) conditional -> . IF expression THEN
    (19) while -> . WHILE expression THEN
    (20) end -> . END
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (9) var_assign -> . NAME ASSIGN expression
    (25) print -> . PRINT LPAREN expression RPAREN
    (26) empty -> .

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    END             shift and go to state 12
    NAME            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16
    PRINT           shift and go to state 17
    $end            reduce using rule 26 (empty -> .)

    emoti                          shift and go to state 1
    code                           shift and go to state 2
    conditional                    shift and go to state 3
    while                          shift and go to state 4
    end                            shift and go to state 5
    expression                     shift and go to state 6
    var_assign                     shift and go to state 7
    print                          shift and go to state 8
    empty                          shift and go to state 9

state 1

    (0) S' -> emoti .



state 2

    (1) emoti -> code .

    $end            reduce using rule 1 (emoti -> code .)


state 3

    (2) emoti -> conditional .

    $end            reduce using rule 2 (emoti -> conditional .)


state 4

    (3) emoti -> while .

    $end            reduce using rule 3 (emoti -> while .)


state 5

    (4) emoti -> end .

    $end            reduce using rule 4 (emoti -> end .)


state 6

    (5) code -> expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    $end            reduce using rule 5 (code -> expression .)
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25


state 7

    (6) code -> var_assign .

    $end            reduce using rule 6 (code -> var_assign .)


state 8

    (7) code -> print .

    $end            reduce using rule 7 (code -> print .)


state 9

    (8) code -> empty .

    $end            reduce using rule 8 (code -> empty .)


state 10

    (18) conditional -> IF . expression THEN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 26

state 11

    (19) while -> WHILE . expression THEN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 28

state 12

    (20) end -> END .

    $end            reduce using rule 20 (end -> END .)


state 13

    (21) expression -> NAME .
    (9) var_assign -> NAME . ASSIGN expression

    PLUS            reduce using rule 21 (expression -> NAME .)
    DIVIDE          reduce using rule 21 (expression -> NAME .)
    MULTIPLY        reduce using rule 21 (expression -> NAME .)
    MINUS           reduce using rule 21 (expression -> NAME .)
    LESSTHAN        reduce using rule 21 (expression -> NAME .)
    GREATERTHAN     reduce using rule 21 (expression -> NAME .)
    EQUALS          reduce using rule 21 (expression -> NAME .)
    NOTEQUALS       reduce using rule 21 (expression -> NAME .)
    $end            reduce using rule 21 (expression -> NAME .)
    ASSIGN          shift and go to state 29


state 14

    (22) expression -> INT .

    PLUS            reduce using rule 22 (expression -> INT .)
    DIVIDE          reduce using rule 22 (expression -> INT .)
    MULTIPLY        reduce using rule 22 (expression -> INT .)
    MINUS           reduce using rule 22 (expression -> INT .)
    LESSTHAN        reduce using rule 22 (expression -> INT .)
    GREATERTHAN     reduce using rule 22 (expression -> INT .)
    EQUALS          reduce using rule 22 (expression -> INT .)
    NOTEQUALS       reduce using rule 22 (expression -> INT .)
    $end            reduce using rule 22 (expression -> INT .)
    THEN            reduce using rule 22 (expression -> INT .)
    RPAREN          reduce using rule 22 (expression -> INT .)


state 15

    (23) expression -> FLOAT .

    PLUS            reduce using rule 23 (expression -> FLOAT .)
    DIVIDE          reduce using rule 23 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 23 (expression -> FLOAT .)
    MINUS           reduce using rule 23 (expression -> FLOAT .)
    LESSTHAN        reduce using rule 23 (expression -> FLOAT .)
    GREATERTHAN     reduce using rule 23 (expression -> FLOAT .)
    EQUALS          reduce using rule 23 (expression -> FLOAT .)
    NOTEQUALS       reduce using rule 23 (expression -> FLOAT .)
    $end            reduce using rule 23 (expression -> FLOAT .)
    THEN            reduce using rule 23 (expression -> FLOAT .)
    RPAREN          reduce using rule 23 (expression -> FLOAT .)


state 16

    (24) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 30

state 17

    (25) print -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 31


state 18

    (10) expression -> expression PLUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 32

state 19

    (11) expression -> expression DIVIDE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 33

state 20

    (12) expression -> expression MULTIPLY . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 34

state 21

    (13) expression -> expression MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 35

state 22

    (14) expression -> expression LESSTHAN . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 36

state 23

    (15) expression -> expression GREATERTHAN . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 37

state 24

    (16) expression -> expression EQUALS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 38

state 25

    (17) expression -> expression NOTEQUALS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 39

state 26

    (18) conditional -> IF expression . THEN
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    THEN            shift and go to state 40
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25


state 27

    (21) expression -> NAME .

    THEN            reduce using rule 21 (expression -> NAME .)
    PLUS            reduce using rule 21 (expression -> NAME .)
    DIVIDE          reduce using rule 21 (expression -> NAME .)
    MULTIPLY        reduce using rule 21 (expression -> NAME .)
    MINUS           reduce using rule 21 (expression -> NAME .)
    LESSTHAN        reduce using rule 21 (expression -> NAME .)
    GREATERTHAN     reduce using rule 21 (expression -> NAME .)
    EQUALS          reduce using rule 21 (expression -> NAME .)
    NOTEQUALS       reduce using rule 21 (expression -> NAME .)
    RPAREN          reduce using rule 21 (expression -> NAME .)
    $end            reduce using rule 21 (expression -> NAME .)


state 28

    (19) while -> WHILE expression . THEN
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    THEN            shift and go to state 41
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25


state 29

    (9) var_assign -> NAME ASSIGN . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 42

state 30

    (24) expression -> LPAREN expression . RPAREN
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25


state 31

    (25) print -> PRINT LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression LESSTHAN expression
    (15) expression -> . expression GREATERTHAN expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOTEQUALS expression
    (21) expression -> . NAME
    (22) expression -> . INT
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 44

state 32

    (10) expression -> expression PLUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 10 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 10 (expression -> expression PLUS expression .)
    LESSTHAN        reduce using rule 10 (expression -> expression PLUS expression .)
    GREATERTHAN     reduce using rule 10 (expression -> expression PLUS expression .)
    EQUALS          reduce using rule 10 (expression -> expression PLUS expression .)
    NOTEQUALS       reduce using rule 10 (expression -> expression PLUS expression .)
    $end            reduce using rule 10 (expression -> expression PLUS expression .)
    THEN            reduce using rule 10 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 10 (expression -> expression PLUS expression .)
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20

  ! DIVIDE          [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! MULTIPLY        [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 18 ]
  ! MINUS           [ shift and go to state 21 ]
  ! LESSTHAN        [ shift and go to state 22 ]
  ! GREATERTHAN     [ shift and go to state 23 ]
  ! EQUALS          [ shift and go to state 24 ]
  ! NOTEQUALS       [ shift and go to state 25 ]


state 33

    (11) expression -> expression DIVIDE expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 11 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 11 (expression -> expression DIVIDE expression .)
    MULTIPLY        reduce using rule 11 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 11 (expression -> expression DIVIDE expression .)
    LESSTHAN        reduce using rule 11 (expression -> expression DIVIDE expression .)
    GREATERTHAN     reduce using rule 11 (expression -> expression DIVIDE expression .)
    EQUALS          reduce using rule 11 (expression -> expression DIVIDE expression .)
    NOTEQUALS       reduce using rule 11 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 11 (expression -> expression DIVIDE expression .)
    THEN            reduce using rule 11 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 11 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 18 ]
  ! DIVIDE          [ shift and go to state 19 ]
  ! MULTIPLY        [ shift and go to state 20 ]
  ! MINUS           [ shift and go to state 21 ]
  ! LESSTHAN        [ shift and go to state 22 ]
  ! GREATERTHAN     [ shift and go to state 23 ]
  ! EQUALS          [ shift and go to state 24 ]
  ! NOTEQUALS       [ shift and go to state 25 ]


state 34

    (12) expression -> expression MULTIPLY expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 12 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 12 (expression -> expression MULTIPLY expression .)
    MULTIPLY        reduce using rule 12 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 12 (expression -> expression MULTIPLY expression .)
    LESSTHAN        reduce using rule 12 (expression -> expression MULTIPLY expression .)
    GREATERTHAN     reduce using rule 12 (expression -> expression MULTIPLY expression .)
    EQUALS          reduce using rule 12 (expression -> expression MULTIPLY expression .)
    NOTEQUALS       reduce using rule 12 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 12 (expression -> expression MULTIPLY expression .)
    THEN            reduce using rule 12 (expression -> expression MULTIPLY expression .)
    RPAREN          reduce using rule 12 (expression -> expression MULTIPLY expression .)

  ! PLUS            [ shift and go to state 18 ]
  ! DIVIDE          [ shift and go to state 19 ]
  ! MULTIPLY        [ shift and go to state 20 ]
  ! MINUS           [ shift and go to state 21 ]
  ! LESSTHAN        [ shift and go to state 22 ]
  ! GREATERTHAN     [ shift and go to state 23 ]
  ! EQUALS          [ shift and go to state 24 ]
  ! NOTEQUALS       [ shift and go to state 25 ]


state 35

    (13) expression -> expression MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 13 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 13 (expression -> expression MINUS expression .)
    LESSTHAN        reduce using rule 13 (expression -> expression MINUS expression .)
    GREATERTHAN     reduce using rule 13 (expression -> expression MINUS expression .)
    EQUALS          reduce using rule 13 (expression -> expression MINUS expression .)
    NOTEQUALS       reduce using rule 13 (expression -> expression MINUS expression .)
    $end            reduce using rule 13 (expression -> expression MINUS expression .)
    THEN            reduce using rule 13 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 13 (expression -> expression MINUS expression .)
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20

  ! DIVIDE          [ reduce using rule 13 (expression -> expression MINUS expression .) ]
  ! MULTIPLY        [ reduce using rule 13 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 18 ]
  ! MINUS           [ shift and go to state 21 ]
  ! LESSTHAN        [ shift and go to state 22 ]
  ! GREATERTHAN     [ shift and go to state 23 ]
  ! EQUALS          [ shift and go to state 24 ]
  ! NOTEQUALS       [ shift and go to state 25 ]


state 36

    (14) expression -> expression LESSTHAN expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for MULTIPLY resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
  ! shift/reduce conflict for GREATERTHAN resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for NOTEQUALS resolved as shift
    $end            reduce using rule 14 (expression -> expression LESSTHAN expression .)
    THEN            reduce using rule 14 (expression -> expression LESSTHAN expression .)
    RPAREN          reduce using rule 14 (expression -> expression LESSTHAN expression .)
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25

  ! PLUS            [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! MULTIPLY        [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! MINUS           [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! LESSTHAN        [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! GREATERTHAN     [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! EQUALS          [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]
  ! NOTEQUALS       [ reduce using rule 14 (expression -> expression LESSTHAN expression .) ]


state 37

    (15) expression -> expression GREATERTHAN expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for MULTIPLY resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
  ! shift/reduce conflict for GREATERTHAN resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for NOTEQUALS resolved as shift
    $end            reduce using rule 15 (expression -> expression GREATERTHAN expression .)
    THEN            reduce using rule 15 (expression -> expression GREATERTHAN expression .)
    RPAREN          reduce using rule 15 (expression -> expression GREATERTHAN expression .)
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25

  ! PLUS            [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! DIVIDE          [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! MULTIPLY        [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! MINUS           [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! LESSTHAN        [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! GREATERTHAN     [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! EQUALS          [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]
  ! NOTEQUALS       [ reduce using rule 15 (expression -> expression GREATERTHAN expression .) ]


state 38

    (16) expression -> expression EQUALS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . LESSTHAN expression
    (15) expression -> expression . GREATERTHAN expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOTEQUALS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for MULTIPLY resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
  ! shift/reduce conflict for GREATERTHAN resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for NOTEQUALS resolved as shift
    $end            reduce using rule 16 (expression -> expression EQUALS expression .)
    THEN            reduce using rule 16 (expression -> expression EQUALS expression .)
    RPAREN          reduce using rule 16 (expression -> expression EQUALS expression .)
    PLUS            shift and go to state 18
    DIVIDE          shift and go to state 19
    MULTIPLY        shift and go to state 20
    MINUS           shift and go to state 21
    LESSTHAN        shift and go to state 22
    GREATERTHAN     shift and go to state 23
    EQUALS          shift and go to state 24
    NOTEQUALS       shift and go to state 25
